# ib-agent

./: .gitignore
backend/: pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 9cf6a0ca3fab_initial_migration_create_all_tables.py
backend/app/: config.py  main.py
backend/app/api/routes/: chat.py  health.py  projects.py  webhooks.py
backend/app/db/: database.py  models.py
backend/app/middleware/: auth.py
backend/app/services/: browser.py  llm_client.py  redis_client.py  storage.py
backend/app/utils/: retry.py
backend/app/workflows/: base.py  company_lookup.py
backend/tests/: conftest.py  test_auth.py  test_browser.py  test_health.py  test_projects.py  test_retry.py  test_workflows.py
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/projects/[id]/: page.tsx
frontend/src/components/: chat-interface.tsx  create-project-button.tsx  project-list.tsx
frontend/src/lib/: api.ts
